syntax = "proto3";
option go_package = "github.com/shekhirin/zenly-task/internal/pb";

package proto;

import "google/protobuf/timestamp.proto";

import "enrichers/weather.proto";
import "enrichers/personal_place.proto";
import "enrichers/transport.proto";

message GeoLocation {
  double lat = 1;
  double lng = 2;
  google.protobuf.Timestamp created_at = 3;
}

message GeoLocationEnriched {
  GeoLocation geo_location = 1;

  enrichers.Weather weather = 2;
  enrichers.PersonalPlace personal_place = 3;
  enrichers.Transport transport = 4;
}
