syntax = "proto3";
option go_package = "github.com/shekhirin/zenly-task/internal/pb";

package proto;

import "geo_location.proto";

service Zenly {
  rpc Publish(stream PublishRequest) returns (PublishResponse) {}
  rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse) {}
}

message PublishRequest {
  int32 user_id = 1;
  GeoLocation geo_location = 2;
}

message PublishResponse {
  bool success = 1;
}

message SubscribeRequest {
  repeated int32 user_id = 1;
}

message SubscribeResponse {
  int32 user_id = 1;
  GeoLocationEnriched geo_location = 2;
}
